fix: tweaked line height to better accommodate text descenders
upped line-height for input, buttons, textareas, etc from 1.15 to 1.2 so that text descenders don't look cut off

--- a/regulations/static/regulations/css/main.css
+++ b/regulations/static/regulations/css/main.css
@@ -158,7 +158,7 @@ textarea {
   /* 1 */
   font-size: 100%;
   /* 1 */
-  line-height: 1.15;
+  line-height: 1.2;
   /* 1 */
   margin: 0;
   /* 2 */
